# re-imagine

./: .clang-format  .clang-tidy  .editorconfig  .envrc  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  Doxyfile  GEMINI.md  LICENSE  NOTES.md  README.md  env.ps1  flake.nix
.github/: CODEOWNERS
.github/workflows/: ci.yml  release.yml
assets/: map.csv
docs/: CONTRIBUTING.md  doxygen.md  memory-management.md  naming-conventions.md
include/: battle.h  collision.h  components.h  debug.h  game.h  list.h  map.h  menu.h  mon.h  pause.h  player.h  spritesheet_reader.h  stack.h  utils.h
nix/: default.nix  devShell.nix  package.nix  packages.nix  raylib-tileson.nix  shell.nix  tileson.nix  tmx.nix
scripts/: check.sh  clang-format.bat  clang-format.sh  clang-tidy.bat  clang-tidy.sh  cppcheck.sh
src/: battle.c  battle.h  collision.c  game.c  game.h  list.c  main.c  map.c  map.h  menu.c  mon.c  pause.c  pause.h  player.c  player.h  spritesheet_reader.c  stack.c  utils.c  utils.h
